add more gc